wp-content/plugins/bidx-plugin/static/less/base.less
/* ... */
// wells.less
// -------------------------










/*******************************************************************************************
*
*   Responsive breakpoints
*
********************************************************************************************/


    /* Large desktop */
    @media (min-width: 1200px) {

    }

    /* styles shared by portrait tablet and above */
    @media (min-width: 980px ) {

        /* header */
        header .navbar-inner {
            height:                     109px;
        }



        header.navbar .navbar-inner > .container {
            position:                   relative;
        }

        header.navbar .header-logo {

            height:                     100%;
            overflow:                   hidden;
            min-width:                  200px;
            float:                      left;
            min-height:                 40px; /* min-height forces nav menu to float right */
        }
            header.navbar .header-logo img {
                margin-top:                 15px;
            }

            header.navbar .header-logo .site-title {
                margin-top:                 11px;
                display: inline-block;
                font-size: 24px;
            }

        header.navbar .iconbar-wrapper {
            float:                      right;
        }

        /* header controls */

        header.navbar .bidx-header-controls {
            margin-top:                 34px;
        }

        header.navbar .bidx-header-controls .btn {
            margin-top:                 0;
            width:                      95%; /* made buttons a bit smaller to create more space between them */
            float:                      right;
        }
        /* end header controls */


        /* cancel bootstrap styles */
        header.navbar .nav > li.active > a, header.navbar .nav > li.active > a:hover, header.navbar .nav > li.active > a:focus {
            color:                                  #444;
            background-color:                       transparent;
            -webkit-box-shadow:                     none;
            -moz-box-shadow:                        none;
            box-shadow:                             none;
        }


        /* end header */

        /* content */


        /* end content */


    }

    /* Landscape phones and down */
    @media  (max-width: 979px) {

        /************************  General styles *******************************/

            body {
                padding-left: 0;
                padding-right: 0;
            }


        /************************  End general styles *******************************/

        /************************  Header / Footer styles *******************************/

        /* header styles */

            .navbar-fixed-top {
                margin-bottom: 0;
            }

            .nav-collapse, .nav-collapse.collapse {
                height: auto;
                display: inline;
            }
            .nav-collapse, .nav-collapse.collapse ul {
                text-align: center;
            }
            .nav-collapse, .nav-collapse.collapse ul li {
                display: inline-block;
            }


            header.navbar {
                margin-left:                -20px;
                margin-right:               -20px;
            }
            header.navbar .navbar-inner {
                padding:                    0;
            }
            header.navbar .header-logo {
                height:                     100%;
                overflow:                   hidden;
                width:                      100%;
                text-align:                 center;
                margin:                     20px 0;
            }

            header.navbar .iconbar-wrapper {
                text-align:                 center;
                margin:                     0 3%;
            }

            header.navbar .iconbar-wrapper .iconbar > ul {
                display:                    inline-block;
                margin:                     0 auto;
            }

            header.navbar .search {
                text-align:                 center;
                margin-bottom:              10px;
            }

            .bidx-header-controls {
                padding:            0 3% 20px;
            }


        /* End header styles */

        /* footer */

            footer .page-footer {
                margin-left:                0;
                margin-right:               0;
            }
        /* end footer */

        /************************  End Header / Footer styles *******************************/

        /* general override to ditch caret from menu's*/
/*        li a .caret {
            display: none;
        }*/
        /* end contact page */


        /************************  Template styles *******************************/

            .container {
                width:94%;
                margin: 0 3% 20px;
            }
            header .container {
                width: 100%;
                margin: 0;
            }

            .bidx > .container,
            .bidx header {
                margin:                     0;
            }

            #wrap .inner-wrap,
            .home #wrap .inner-wrap {
                padding-top: 0;
            }

            .bidx-edit #wrap .inner-wrap {
                padding-top: 0;
            }

        /************************  End Template styles *******************************/

    }
/* ... */

